MODDICORE-440 Mode of Issuance not being set with MARC to Instance Mapping